--- a/css/forms.css
+++ b/css/forms.css
@@ -974,14 +974,16 @@ cont_p_paz_label{
 #puntiMTC,
 #puntiNamikoshi,
 #meridianiMTC,
-#puntiAuricolari{ /* PAZIENTI */
+#puntiAuricolari,
+#puntiPlantari{ /* PAZIENTI */
 	height:auto !important;
 	padding-top: 12px;
 }
 #puntiMTC > div,
 #puntiNamikoshi > div,
 #meridianiMTC > div,
-#puntiAuricolari > div{ /* PAZIENTI */
+#puntiAuricolari > div,
+#puntiPlantari > div{ /* PAZIENTI */
 	border-bottom:none !important;
     border-radius: 6px;
 	background-color:rgba(0,0,0,0.05);
@@ -989,25 +991,29 @@ cont_p_paz_label{
 #puntiMTC > div:not(.pushDrag_before),
 #puntiNamikoshi > div:not(.pushDrag_before),
 #meridianiMTC > div:not(.pushDrag_before),
-#puntiAuricolari > div:not(.pushDrag_before){ /* PAZIENTI */
+#puntiAuricolari > div:not(.pushDrag_before),
+#puntiPlantari > div:not(.pushDrag_before){ /* PAZIENTI */
 	margin-top:0px !important;
 }
 #puntiMTC > div:not(.pushDrag_after),
 #puntiNamikoshi > div:not(.pushDrag_after),
 #meridianiMTC > div:not(.pushDrag_after),
-#puntiAuricolari > div:not(.pushDrag_after){ /* PAZIENTI */
+#puntiAuricolari > div:not(.pushDrag_after),
+#puntiPlantari > div:not(.pushDrag_after){ /* PAZIENTI */
 	margin-bottom: 2px !important;
 }
 #puntiMTC > div,
 #puntiNamikoshi > div,
-#puntiAuricolari > div{ /* PAZIENTI */
+#puntiAuricolari > div,
+#puntiPlantari > div{ /* PAZIENTI */
 	height:auto !important;
 	line-height:normal !important;
 }
 #puntiMTC img.noMod,
 #puntiNamikoshi img.noMod,
 #meridianiMTC img.noMod,
-#puntiAuricolari img.noMod{ /* PAZIENTI */
+#puntiAuricolari img.noMod,
+#puntiPlantari img.noMod{ /* PAZIENTI */
 	vertical-align: -webkit-baseline-middle;
 	margin-top: -9px;
 	height: 15px;
@@ -1563,7 +1569,8 @@ body:not(.smart) #scheda:not(.scheda_procedura) .dettMeridiano span:not(.valPunt
 }
 body:not(.touch) #puntiMTC .dettPunto:hover,
 body:not(.touch) #puntiNamikoshi .dettPunto:hover,
-body:not(.touch) #puntiAuricolari .dettPunto:hover{
+body:not(.touch) #puntiAuricolari .dettPunto:hover,
+body:not(.touch) #puntiPlantari .dettPunto:hover{
 	background-color:rgba(0,0,0,0.1) !important;
 }
 #dettagliCont .dettPunto,
@@ -1593,7 +1600,8 @@ body:not(.touch) #puntiAuricolari .dettPunto:hover{
 #puntiMTC .cestino,
 #puntiNamikoshi .cestino,
 #meridianiMTC .cestino,
-#puntiAuricolari .cestino{
+#puntiAuricolari .cestino,
+#puntiPlantari .cestino{
 	margin:7px 10px 7px 10px;
 	margin-left:0px;
 	cursor:pointer !important;
@@ -1603,7 +1611,8 @@ body:not(.touch) #puntiAuricolari .dettPunto:hover{
 .smart #puntiMTC .cestino,
 .smart #puntiNamikoshi .cestino,
 .smart #meridianiMTC .cestino,
-.smart #puntiAuricolari .cestino{
+.smart #puntiAuricolari .cestino,
+.smart #puntiPlantari .cestino{
 	margin: 13px 9px 12px 0px !important;
 }
 
@@ -1863,8 +1872,9 @@ body:not(.touch) #puntiAuricolari .dettPunto:hover{
 .sch_Max450 .rgProcMod.dettNamikoshi .numPoints.numNamikoshi{
 	width:130px !important;
 }
-.sch_Max450 .dettNamikoshi .numPoints
-.sch_Max450 .dettAuriculo .numPoints{
+.sch_Max450 .dettNamikoshi .numPoints,
+.sch_Max450 .dettAuriculo .numPoints,
+.sch_Max450 .dettReflex .numPoints{
 	width:130px !important;
 }
 #dettagliCont .selectTratt:not(.numPoints){
