--- a/css/manichino.css
+++ b/css/manichino.css
@@ -96,7 +96,8 @@
 .touch #lb_move.lbPunto span,
 .touch #lb_move.lbProc span,
 .touch #lb_move.lbMeridiano span,
-.touch #lb_move.lbAuriculo span{
+.touch #lb_move.lbAuriculo span,
+.touch #lb_move.lbReflex span{
 	background-image: url(../img/ico_move.png) !important;
 	margin-left:30px;
 }
@@ -107,6 +108,7 @@
 	background-image:url(../img/cartellaClinicaG.png);
 }
 
+.lbReflex,
 .lbAuriculo,
 .lbPunto,
 .lbProc{
@@ -128,7 +130,8 @@
 .touch #lb_move.lbPunto,
 .touch #lb_move.lbProc,
 .touch #lb_move.lbMeridiano,
-.touch #lb_move.lbAuriculo{
+.touch #lb_move.lbAuriculo,
+.touch #lb_move.lbReflex{
 	margin-top:70px !important;
 	margin-left:-30px !important;
 }
