--- a/css/pplhd.css
+++ b/css/pplhd.css
@@ -13,6 +13,7 @@
 .pplhd.ios #tratt_cont_namikoshi,
 .pplhd.ios #tratt_cont_meridiani,
 .pplhd.ios #tratt_cont_auriculo,
+.pplhd.ios #tratt_cont_reflex,
 .pplhd.ios #pulsante_file,
 .pplhd.ios #pulsanti_base .separatorePulsanti,
 .pplhd.ios #notLogged,
