--- a/css/guida.css
+++ b/css/guida.css
@@ -283,29 +283,68 @@
 		width: 100% !important;
 	}
 }
+#loginGuida i:first-child{
+	display:block;
+	color:rgba(0,0,0,0.6);
+	text-align:left;
+}
+.nasBtnLogin{
+	/* display:none !important; */
+	visibility: hidden;
+}
 .btnReference{
 	display: inline-block;
-    background-image: url(../img/frDx.png);
-    background-size: auto 51px;
-    padding-right: 26px;
+    vertical-align: middle;
+    background-image: url(../img/m_reference.png);
+    background-size: auto 107%;
+    padding-right: 10px;
     background-repeat: no-repeat;
-    background-position: calc(100% + 11px) center;
+    background-position: left center;
     height: 30px;
     line-height: 28px;
     background-color: #454545;
     border-radius: 5px;
-    padding-left: 10px;
+    padding-left: 30px;
     color: #FFF;
     margin-top: -7px;
     cursor: pointer;
     margin-bottom: -21px;
     float: left;
 }
+.btnFeedback{
+	display: inline-block;
+    vertical-align: middle;
+    background-image: url(../img/ico_feedback.png);
+    background-size: auto;
+    padding-right: 10px;
+    background-repeat: no-repeat;
+    background-position: 3px -4px;
+    height: 30px;
+    line-height: 28px;
+    background-color: #454545;
+    border-radius: 5px;
+    padding-left: 36px;
+    color: #FFF;
+    margin-top: 10px;
+    margin-left: 10px;
+    cursor: pointer;
+    margin-bottom: -21px;
+    float: left;
+}
 #guida_generica .btnReference{
-    float: right !important;
-	opacity:0.6 !important;
-    margin-top: -10px !important;
-    margin-bottom: 0px !important;
+	/* opacity:0.6 !important; */
+	margin-top: 10px;
+	background-color: #edab37;
+}
+
+.smart #guida_generica .btnReference{
+	height: 34px;
+	line-height: 32px;
+}
+.smart #guida_generica .btnFeedback{
+	height: 34px;
+	line-height: 32px;
+	margin-top: 9px;
 }
 
 
@@ -509,6 +548,13 @@
 #guida_generica .noVisPiu{
     width: 200px;
     float: right;	
+	margin-right: -27px;
+	position: absolute;
+    top: -11px;
+    right: 69px;
+}
+#guida_generica .noVisPiu:hover{
+	opacity:1;
 }
 .noVisPiu input[type='checkbox']{
 	vertical-align: middle;
@@ -548,7 +594,6 @@
 	cursor:pointer;
 	margin:5px;
 }
-
 #guida_generica{
 	opacity: 0;
 }
@@ -576,24 +621,115 @@ body:not(.smart) #guida_generica.vis{
 .smart #guida_generica.vis{
 	margin-bottom:0px !important;
 }
-
+@media (min-width: 631px){
+	#guida_generica .noVisPiu{
+		color: #FFF;
+	}
+	#guida_generica .fumetti_chiudi{
+		background-image: url(../img/chMenu.png);
+	}
+	.smart #loginGuida{
+	    width: calc(100% + 42px);
+		margin-left: -21px;
+	}
+}
+@media (max-width: 630px){	
+	.smart #guida_generica{
+		width: calc(100% - 20px) !important;
+	}
+	.smart #guida_generica .noVisPiu{
+		margin-right:0px !important;
+		opacity:1;
+		top: -9px;
+		right: calc(50% - 160px);
+	}
+	.smart #guida_generica .fumetti_cont{
+		width: 410px;
+		background-image: none;
+		background-color:#FFF;
+		padding-top: 45px !important;
+	}
+	.smart #guida_generica_info{
+		width: calc(100% - 25px);
+		margin-right:0px;
+	}
+	.smart #guida_generica_info,
+	.smart #guida_generica_mappe{
+		display:block;
+	}
+	.smart #guida_generica_mappe{
+		background-color: #494949;
+		padding: 10px;
+		text-align: center;
+		width: calc(100% + 67px);
+		margin-left: -48px;
+		margin-top: 44px;
+		margin-bottom: -43px;
+	}
+	.smart #guida_generica_mappe i{
+		width:160px;
+		margin-top:0px;
+		display:inline-block;
+		vertical-align: top;
+		margin-right:-4px;
+	}
+	.smart #guida_generica_sets{
+		width:calc(100% - 160px);
+		display:inline-block;
+		vertical-align: top;
+	}
+	.smart #guida_generica .fumetti_chiudi{
+		position:relative;
+		float: right;
+		margin-top: -38px !important;
+		margin-right: -11px !important;
+	}
+	.smart #btn_loginGuida:not(.nasBtnLogin){
+		display:inline-block !important;
+	}
+}
+@media (max-width: 450px){
+	.smart #guida_generica_mappe{
+		width: calc(100% + 45px);
+		margin-left: -25px;
+		padding: 20px 10px;
+	}
+	.smart #guida_generica_mappe > i{
+		background-position: top center;
+		padding-top:70px;
+	}
+	.smart #guida_generica_info {
+		width: calc(100% - 4px);
+	}
+}
 @media (max-width: 420px){	
 	.smart .fumetti_cont{
 		width: 100% !important;
 		padding-top:25px !important;
 		padding-right:25px !important;
 	}
-	.smart #guida_generica{
-		width: calc(100% - 20px) !important;
-	}
 	.smart .noVisPiu{
 		margin-right:0px !important;
+	}
+	.smart #guida_generica_mappe{
+		width: calc(100% + 50px);
+	}
+	.smart #guida_generica .fumetti_chiudi{
+		margin-top: -19px;
+	}
+	.smart #guida_generica .noVisPiu{
+		right: 49px;
 	}
 }
 
 #guida_generica .fumetti_cont{
 	display: inline-block;
     vertical-align: top;
+	background-image: url(../img/f_guidaGenericaT.png);
+	background-repeat:repeat-y;
+	width:610px;
+	padding-right: 19px;
+	background-color:#494949;
 }
 body:not(.smart) #guida_generica .fumetti_freccia:first-child{
 	width:18px;
@@ -819,6 +955,82 @@ body:not(.smart) .guida_set .fumetti_freccia:last-child{
 	width: calc(100%);
 	margin-bottom:-18px;
 }
+
+#guida_generica_info{
+	width: 273px;
+    display: inline-block;
+    vertical-align: top;
+    margin-right: -4px;
+}
+#guida_generica_mappe{
+	width: 221px;
+    text-align: left;
+    display: inline-block;
+    vertical-align: top;
+    padding-left: 22px;
+    margin-top: -2px;
+    margin-bottom: -30px;
+    margin-left: 50px;
+}
+#guida_generica_mappe i{
+	display:block;
+	color: rgba(255,255,255,0.6);
+	padding-top:68px;
+	/* background-image:url(../img/ico_mappaB.png); */
+	background-image:url(../img/splash_mappeMenu.png);
+	background-repeat: no-repeat;
+	background-position: center -16px;
+	background-size:80px;
+}
+#guida_generica_sets > div{
+    width: calc(100% + 9px);
+    height: 58px;
+    line-height: 48px;
+    padding-left: 7px;
+    background-image: url(../img/frDx.png);
+    background-repeat: no-repeat;
+    background-position: calc(100% + 9px) center;
+    background-size: auto 90%;
+    text-align: left;
+    color: #FFF;
+    border-bottom: 1px solid rgba(255,255,255,0.05);
+    cursor: pointer;
+    font-size: 16px;
+    padding-bottom: 2px;
+    margin-left: -7px;
+}
+#guida_generica_sets > div:last-child{
+	border-bottom: none;
+}
+#guida_generica_sets > div > div{
+	display: inline-block;
+    vertical-align: middle;
+    float: left;
+    background-color: rgba(255,255,255,0.8);
+    width: 42px;
+    height: 42px;
+    border-radius: 6px;
+    margin-top: 8px;
+    text-align: center;
+    padding-top: 4px;
+    margin-right: 7px;  
+}
+#guida_generica_sets div > div > img{
+	height: 34px;
+    opacity: 0.8;
+}
+#guida_generica_sets div:hover{
+	background-color: rgba(255,255,255,0.1);
+}
+#guida_generica_sets div span{
+	margin-top: -14px;
+    display: block;
+    font-style: italic;
+    font-size: 12px;
+    line-height: normal !important;
+    opacity: 0.7;
+    color: #CCC;
+}
 @media (max-width: 820px){	
 	body:not(.smart) .guida_anatomia .fumetti_cont,
 	body:not(.smart) .guida_archivi .fumetti_cont,
@@ -897,6 +1109,8 @@ body:not(.smart) .guida_set .fumetti_freccia:last-child{
 		background-position:38px top !important;
 	}
 }
+
+
 @media (max-width: 450px){	
 	.guida_archivi .fumetti_cont h1,
 	.guida_set .fumetti_cont h1,
