--- a/css/popup_colori.css
+++ b/css/popup_colori.css
@@ -25,7 +25,7 @@
 }
 #contColori > p{
 	text-align: left !important;
-    border-top: 1px solid rgba(0,0,0,0.05);
+    border-top: 1px solid rgba(0,0,0,0.1);
     min-height: 50px;
     margin-top: 4px;
     margin-bottom: 4px;
@@ -46,22 +46,23 @@
 	cursor:pointer;
 }
 #guida_generica #colSel{
-    text-align: left;
-    width: 120px;
+    text-align: right;
+    /* width: 120px; */
     margin-bottom: -47px;
-    margin-top: 36px;
+    margin-top: 31px;
 }
 body:not(.smart) #guida_generica #colSel{
-    margin-left: -28px;
+    margin-right: -28px;
 }
 #guida_generica #colSel p{
 	margin:0px;
+	display: inline-block;
+    vertical-align: middle;
 }
 #guida_generica #colSel p:first-child{
 	margin-bottom: 3px;
     font-style: italic;
     opacity: 0.6;
-    font-size: var(--font-11);
     padding-left: 3px;
 }
 #guida_generica #colSel span{
@@ -71,15 +72,37 @@ body:not(.smart) #guida_generica #colSel{
 	border-radius:3px;
 	margin:3px;
 }
+.smart #guida_generica #colSel span{
+	width: 28px;
+    height: 28px;
+    margin-left: 5px;
+}
 #sizeSel > span,
 #pointerSel > span,
-#patientSel > span{
+#patientSel > span,
+#guideSel > span{
 	display:inline-block;
     vertical-align: middle;
 	height: 50px;
     line-height: 50px;
 }
-
+#guideSel > span{
+	padding:6px 0;
+	width: calc(100% - 155px);
+}
+#guideSel input[type=checkbox]{
+	width: 20px;
+    height: 20px;
+}
+#guideSel > span b{
+	float: right;
+    display: block;
+    height: 39px;
+    line-height: 38px;
+    font-weight: normal;
+    text-decoration: underline;
+	cursor:pointer;
+}
 
 
 #sizeSel > span b,
